--- a/index.html
+++ b/index.html
@@ -1,1 +1,21 @@
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>artwalk</title>
+</head>
+<body>
+    <div id="pri">
+    <img src="BANNER 1.png" alt=""> </div>
+ <img src="BANNER 2.png" alt="">   
+ <img src="BANNER 3.png" alt="">
+ <img src="BANNER 4.png" alt="">
+ <img src="BANNER 5.png" alt="">
+ <img src="FIM.png" alt="">
 
+
+
+</body>
+</html>
